--- a/专题/线段树/1.in
+++ b/专题/线段树/1.in
@@ -1,18 +1,10 @@
-5
-0 4 4
-0 3 1
-3 4 2
-0 2 2
-0 2 3
-4
-0 1 1
-3 4 1
-1 3 2
-1 3 1
-6
-0 1 0
-1 2 1
-2 3 1
-1 2 0
-2 3 0
-1 2 1
+1
+10
+1 2 3 4 5 6 7 8 9 10
+Query 1 3
+Add 3 6
+Query 2 7
+Sub 10 2
+Add 6 3
+Query 3 10
+End 
